tests/samples/negative/types/enum_discriminant_overflow.ax
module enum_discriminant_overflow;

enum Choice: u8 {
  big = 256,
}

fn main() -> i32 {
  return 0;
}
